codepkg/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Resource_Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Group</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Order_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Order Record</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Request_Number_If_Applicable__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Request # (If Applicable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Vaccination_Site__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Vaccination Site?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PHM_EOM_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Request meets the submission criteria as stated in the PH&amp;M EOM.</description>
        <label>PH&amp;M EOM Confirmed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Method_Other__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Payment Method Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wire X</fullName>
                </value>
                <value>
                    <fullName>CalCard</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Escrow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Terms_Other__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Payment Terms Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net 3</fullName>
                </value>
                <value>
                    <fullName>Net 10</fullName>
                </value>
                <value>
                    <fullName>Net 15</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Net 45</fullName>
                </value>
                <value>
                    <fullName>50% Down/50% on Delivery</fullName>
                </value>
                <value>
                    <fullName>On Delivery</fullName>
                </value>
                <value>
                    <fullName>Pre-Paid</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous / Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Tracking_Number__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Payment Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personnel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Personnel</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planned_GI__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <inlineHelpText>Date inbound shipment is expected to be delivered</inlineHelpText>
        <label>Planned GI</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Population_65_years_old_in_county__c</fullName>
        <label>Population % &gt; 65 years old in county?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt;15%</fullName>
                </value>
                <value>
                    <fullName>10-15%</fullName>
                </value>
                <value>
                    <fullName>5-9%</fullName>
                </value>
                <value>
                    <fullName>0-4%</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority_for_Requests__c</fullName>
        <label>Priority for Requests</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Emergency</fullName>
                    <label>Emergency (&lt;12 Hours)</label>
                </value>
                <value>
                    <fullName>Urgent</fullName>
                    <label>Urgent (&gt;12 Hours)</label>
                </value>
                <value>
                    <fullName>Sustainment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Received_Final_Purchase_Order__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Product Received Final Purchase Order</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Amendment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Purchase Order Amendment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Purchase Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_Release__c</fullName>
        <inlineHelpText>Indicates that
&quot;Q&quot; for Quality
&quot;R&quot; for Release</inlineHelpText>
        <label>Quality Release</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                    <default>true</default>
                    <label>R</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RDMHS_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RDMHS Approved By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RDMHS_Approved_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RDMHS Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RDMHS_Program_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This creation of this request was in consultation with the RDMHC Program.</description>
        <label>RDMHS Program Confirmed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Approval_Status__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Record Approval Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>IF(OR(ISPICKVAL(County__c , &apos;Ventura&apos;),
       ISPICKVAL(County__c , &apos;Los Angeles&apos;),
       ISPICKVAL(County__c , &apos;Orange&apos;),
       ISPICKVAL(County__c , &apos;Santa Barbara&apos;),
       ISPICKVAL(County__c , &apos;San Luis Obispo&apos;)
	  ), &apos;Region 1&apos;, 
		
IF(OR(ISPICKVAL(County__c , &apos;Humboldt&apos;),
		  ISPICKVAL(County__c , &apos;Alameda&apos;),
		  ISPICKVAL(County__c , &apos;Del Norte&apos;),
		  ISPICKVAL(County__c , &apos;San Francisco&apos;),
		  ISPICKVAL(County__c , &apos;Contra Costa&apos;),
		  ISPICKVAL(County__c , &apos;San Mateo&apos;),
		  ISPICKVAL(County__c , &apos;Santa Cruz&apos;),
		  ISPICKVAL(County__c , &apos;Santa Clara&apos;),
		  ISPICKVAL(County__c , &apos;San Benito&apos;),
		  ISPICKVAL(County__c , &apos;Napa&apos;),
          ISPICKVAL(County__c , &apos;Monterey&apos;),
          ISPICKVAL(County__c , &apos;Solano&apos;),
          ISPICKVAL(County__c , &apos;Sonoma&apos;),
          ISPICKVAL(County__c , &apos;Mendocino&apos;),
          ISPICKVAL(County__c , &apos;Marin&apos;),
          ISPICKVAL(County__c , &apos;Lake&apos;)
	), &apos;Region 2&apos;,
	  
IF(OR(ISPICKVAL(County__c , &apos;Modoc&apos;),
			  ISPICKVAL(County__c , &apos;Siskiyou&apos;),
			  ISPICKVAL(County__c , &apos;Colusa&apos;),
			  ISPICKVAL(County__c , &apos;Sierra&apos;),
			  ISPICKVAL(County__c , &apos;Plumas&apos;),
			  ISPICKVAL(County__c , &apos;Shasta&apos;),
			  ISPICKVAL(County__c , &apos;Trinity&apos;),
			  ISPICKVAL(County__c , &apos;Glenn&apos;),
			  ISPICKVAL(County__c , &apos;Tehama&apos;),
			  ISPICKVAL(County__c , &apos;Yuba&apos;),
			  ISPICKVAL(County__c , &apos;Lassen&apos;),
			  ISPICKVAL(County__c , &apos;Butte&apos;),
			  ISPICKVAL(County__c , &apos;Sutter&apos;)
		), &apos;Region 3&apos;,
	  
IF(OR(ISPICKVAL(County__c , &apos;San Joaquin&apos;),
				  ISPICKVAL(County__c , &apos;Sacramento&apos;),
				  ISPICKVAL(County__c , &apos;Placer&apos;),
				  ISPICKVAL(County__c , &apos;Nevada&apos;),
				  ISPICKVAL(County__c , &apos;El Dorado&apos;),
				  ISPICKVAL(County__c , &apos;Calaveras&apos;),
				  ISPICKVAL(County__c , &apos;Amador&apos;), 
				  ISPICKVAL(County__c , &apos;Alpine&apos;),
				  ISPICKVAL(County__c , &apos;Yolo&apos;),
				  ISPICKVAL(County__c , &apos;Tuolumne&apos;),
				  ISPICKVAL(County__c , &apos;Stanislaus&apos;)     
		), &apos;Region 4&apos;,
				  
IF(OR(ISPICKVAL(County__c , &apos;Kings&apos;),
					  ISPICKVAL(County__c , &apos;Madera&apos;),
					  ISPICKVAL(County__c , &apos;Mariposa&apos;),
					  ISPICKVAL(County__c , &apos;Fresno&apos;),
					  ISPICKVAL(County__c , &apos;Kern&apos;),
					  ISPICKVAL(County__c , &apos;Tulare&apos;), 
					  ISPICKVAL(County__c , &apos;Merced&apos;)     
		), &apos;Region 5&apos;,
						
IF(OR(ISPICKVAL(County__c , &apos;San Bernardino&apos;),
						  ISPICKVAL(County__c , &apos;Riverside&apos;),
						  ISPICKVAL(County__c , &apos;Mono&apos;),
						  ISPICKVAL(County__c , &apos;San Diego&apos;),
						  ISPICKVAL(County__c , &apos;Inyo&apos;),
						  ISPICKVAL(County__c , &apos;Imperial&apos;)    
		), &apos;Region 6&apos;,&apos;Other Region&apos;							
)
)
)
)
)
)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Agency_Text__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Requestor Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Agency__c</fullName>
        <formula>Requestor__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requestor Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Email_Text__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Requestor Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_First_Name_Text__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Requestor First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Last_Name_Text__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Requestor Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Parent_Agency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Requestor Parent Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Phone_Text__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Requestor Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Requestor_Title_Text__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Requestor Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource_Request_Number__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Resource Request Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Schedule_for_staff__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dates and Daily schedules needed?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Requirements_Confirmation__c</fullName>
        <label>School Requirements Confirmation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>This event is located at a public or private K-12 school site</fullName>
                </value>
                <value>
                    <fullName>This event is to provide vaccination for the school students, staff, and student’s families</fullName>
                </value>
                <value>
                    <fullName>This event is not related to public or private school</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Shipping Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <label>Shipping State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Abbreviation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shipping_Street_2__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Shipping Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_ZipPostal_Code__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Shipping Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specific_Vaccinator_Licenses_req_d__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Specific Vaccinator Licenses req’d?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specific_language_preferred__c</fullName>
        <label>Specific language preferred?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>MHOAC Review</fullName>
                </value>
                <value>
                    <fullName>RDMHS Review</fullName>
                </value>
                <value>
                    <fullName>CDPH Resource Request Supervisor Review</fullName>
                </value>
                <value>
                    <fullName>CDPH Resource Analyst Review</fullName>
                </value>
                <value>
                    <fullName>Allocation Review</fullName>
                </value>
                <value>
                    <fullName>Deployment Team</fullName>
                </value>
                <value>
                    <fullName>CDPH Pharmacy Consultant Review</fullName>
                    <label>MAC Group Review</label>
                </value>
                <value>
                    <fullName>Analyst Final Review</fullName>
                </value>
                <value>
                    <fullName>Staffing in Progress</fullName>
                </value>
                <value>
                    <fullName>Unfulfilled - Referred</fullName>
                </value>
                <value>
                    <fullName>Partially Fulfilled - Referred</fullName>
                </value>
                <value>
                    <fullName>Unfulfilled - Closed</fullName>
                </value>
                <value>
                    <fullName>Partially Fulfilled - Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled / Denied</fullName>
                </value>
                <value>
                    <fullName>Fulfilled - Closed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Industry__c</fullName>
        <label>Sub Industry</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Industry__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Childcare/ Daycare</fullName>
                </value>
                <value>
                    <fullName>Developmental Services</fullName>
                </value>
                <value>
                    <fullName>IHSS</fullName>
                </value>
                <value>
                    <fullName>Licensed Care Facilities</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Plumbing</fullName>
                </value>
                <value>
                    <fullName>Electric</fullName>
                </value>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Engineers and Engineering firms</fullName>
                </value>
                <value>
                    <fullName>Laboratories</fullName>
                </value>
                <value>
                    <fullName>Solar</fullName>
                </value>
                <value>
                    <fullName>Public Works</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Delivery Services</fullName>
                </value>
                <value>
                    <fullName>Food Packing</fullName>
                </value>
                <value>
                    <fullName>Public Transit</fullName>
                </value>
                <value>
                    <fullName>Trucking</fullName>
                </value>
                <value>
                    <fullName>Ports</fullName>
                </value>
                <value>
                    <fullName>Auto Dealerships</fullName>
                </value>
                <value>
                    <fullName>Auto Repair</fullName>
                </value>
                <value>
                    <fullName>Restaurants</fullName>
                </value>
                <value>
                    <fullName>Grocery Stores</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Petroleum/ Convenience Stores</fullName>
                </value>
                <value>
                    <fullName>Security agencies and security guards</fullName>
                </value>
                <value>
                    <fullName>Sanitation</fullName>
                </value>
                <value>
                    <fullName>Business Properties Association</fullName>
                </value>
                <value>
                    <fullName>Optometrist</fullName>
                </value>
                <value>
                    <fullName>Dentist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SuppliesEquipment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Supplies / Equipment</description>
        <label>Supplies / Equipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task__c</fullName>
        <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
        <label>Task #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_ASN_Units__c</fullName>
        <label>Total ASN Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Admin_Data_Staff_needed__c</fullName>
        <label>Total Admin/Data Staff needed?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_ICU_beds_occupied__c</fullName>
        <label>Total ICU beds occupied (%)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>100%+</fullName>
                </value>
                <value>
                    <fullName>90-100 %</fullName>
                </value>
                <value>
                    <fullName>80-89.99 %</fullName>
                </value>
                <value>
                    <fullName>70-79.99 %</fullName>
                </value>
                <value>
                    <fullName>&lt; 70 % or NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Logistics_Staff_needed__c</fullName>
        <label>Total Logistics Staff needed?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Security_Staff_needed__c</fullName>
        <label>Total Security Staff needed?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Vaccinator_Staff_needed__c</fullName>
        <label>Total Vaccinator Staff needed?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_patient_divide_COVID_patient_censu__c</fullName>
        <formula>What_is_current_total_patient_census__c /  What_is_current_census_of_COVID_patients__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total patient divide COVID+patient censu</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_Of_Resource_Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Type of resource being requested</description>
        <label>Type Of Resource Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type_of_Personnel__c</fullName>
        <label>Type of Personnel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vaccination-related Personnel</fullName>
                </value>
                <value>
                    <fullName>Medical Personnel</fullName>
                </value>
                <value>
                    <fullName>Non-Medical Personnel</fullName>
                </value>
                <value>
                    <fullName>Outbreak Response Team (ORT)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Using_team_nursing_and_out_of_ratio__c</fullName>
        <label>Using team nursing and out of ratio?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Team nursing model in place?</fullName>
                </value>
                <value>
                    <fullName>Have you been out of ratio for more than three days?</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vaccination_site_type__c</fullName>
        <label>Vaccination site type?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clinic</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>Mobile site</fullName>
                </value>
                <value>
                    <fullName>Fairgrounds</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>We_provide_staff_for_vaccination_events__c</fullName>
        <label>Event type COVID, Flu, or Both?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>This event is to administer COVID-19 vaccine only</fullName>
                </value>
                <value>
                    <fullName>This event is to co-administer COVID-19 and the Influenza vaccine</fullName>
                </value>
                <value>
                    <fullName>This event is to administer influenza vaccine only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_closest_phase_tier__c</fullName>
        <label>What is closest phase/tier?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phase 1A / Tier 1</fullName>
                </value>
                <value>
                    <fullName>Phase 1A / Tier 2</fullName>
                </value>
                <value>
                    <fullName>Phase 1A / Tier 3</fullName>
                </value>
                <value>
                    <fullName>Phase 1B / Tier 1</fullName>
                </value>
                <value>
                    <fullName>Phase 1B / Tier 2</fullName>
                </value>
                <value>
                    <fullName>Phase 1C</fullName>
                </value>
                <value>
                    <fullName>Phase 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_current_census_of_COVID_patients__c</fullName>
        <label>What is current census of COVID+patients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_is_current_total_patient_census__c</fullName>
        <label>What is current total patient census?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_is_the_county_s_7_day_case_rate__c</fullName>
        <inlineHelpText>Not including inmates</inlineHelpText>
        <label>What is the county&apos;s 7-day case rate?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>≥ 50</fullName>
                </value>
                <value>
                    <fullName>25 &gt; 50</fullName>
                </value>
                <value>
                    <fullName>≤ 25</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_the_county_s_population_density__c</fullName>
        <label>What is the county&apos;s population density?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>&gt; 500 ppl p/sq. mi</fullName>
                </value>
                <value>
                    <fullName>300 to 500 ppl p/sq. mi</fullName>
                </value>
                <value>
                    <fullName>201 to 300 ppl p/sq. mi</fullName>
                </value>
                <value>
                    <fullName>&lt; 200 ppl p/sq. mi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_is_the_site_name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>What is the site name?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_of_County_population_vaccinated__c</fullName>
        <label>What % of County population vaccinated?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>less than 50%</fullName>
                </value>
                <value>
                    <fullName>50% - 55%</fullName>
                </value>
                <value>
                    <fullName>56% - 60%</fullName>
                </value>
                <value>
                    <fullName>61% - 65%</fullName>
                </value>
                <value>
                    <fullName>66% - 75%</fullName>
                </value>
                <value>
                    <fullName>75% or greater</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>What_status_is_the_event_currently_in__c</fullName>
        <label>What status is the event currently in</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planning stage</fullName>
                </value>
                <value>
                    <fullName>Active stage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Would_you_be_able_to_accept_transfers__c</fullName>
        <inlineHelpText>New capability with this requested staff</inlineHelpText>
        <label>Would you be able to accept transfers?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>